--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,10 @@
       "dest": "index.js",
       "methods": ["GET", "POST", "PATCH", "DELETE", "OPTIONS", "PUT"]
     }
-  ]
+  ],
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 30
+    }
+  }
 }
