--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.7.0",
     "lucide-react": "^0.446.0",
+    "postcss-pxtorem": "^6.1.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
